BE - Fix overflowing text in multiselect component.
Fixes: #1718

--- a/frontend/src/app/components/shared/multiselect/multiselect.less
+++ b/frontend/src/app/components/shared/multiselect/multiselect.less
@@ -11,6 +11,10 @@ multiselect {
         width: 100% / 4;
     }
 
+    checkbox {
+        width: 100%;
+    }
+
     &.cols-3 .option {
         width: 100% / 3;
     }
